cloudformation_pipeline.yml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    Description: Type d'instance EC2
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: CleTo
    Description: Nom de la paire de clés pour accéder à l'instance EC2

Resources:
  # Security Group pour SSH et HTTP
  SecurityGroupGT:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Autorise SSH et HTTP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

  # Instance EC2
  EC2GT:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-0e54671bdf3c8ed8d  
      SecurityGroupIds:
        - !Ref SecurityGroupGT
      Tags:
        - Key: Name
          Value: EC2GT
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash

          sudo yum update -y

          sudo dnf install mariadb105-server -y
          sudo systemctl start mariadb
          sudo systemctl enable mariadb

          mysql -u root <<EOF
          CREATE DATABASE erp;
          CREATE USER 'erp_user'@'localhost' IDENTIFIED BY 'erp_pass';
          GRANT ALL PRIVILEGES ON erp.* TO 'erp_user'@'localhost';
          FLUSH PRIVILEGES;
          EOF

          sudo yum install git -y

          sudo amazon-linux-extras enable corretto
          
          sudo yum install maven -y

          git clone https://github.com/NeoOniX/AWS-ERP.git /home/ec2-user/erp-java-app
          cd /home/ec2-user/erp-java-app
          mvn clean install
          mvn package
          java -jar target/erp-0.0.1.jar &

          curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
          sudo yum install nodejs -y
          sudo npm install -g pm2

          git clone https://github.com/NeoOniX/AWS-ERP-Front.git /home/ec2-user/erp-nextjs-app
          cd /home/ec2-user/erp-nextjs-app
          npm install
          npm run build
          pm2 start "npm run start" --name "ERP-Front" --watch
          pm2 save

          sudo yum install firewalld -y
          sudo systemctl start firewalld
          sudo systemctl enable firewalld
          sudo firewall-cmd --add-port=22/tcp --permanent
          sudo firewall-cmd --add-port=3306/tcp --permanent
          sudo firewall-cmd --add-port=8080/tcp --permanent
          sudo firewall-cmd --add-port=3000/tcp --permanent
          sudo firewall-cmd --reload
